--- a/package.json
+++ b/package.json
@@ -1,3 +1,9 @@
 {
-    "type": "module"
+    "type": "module",
+    "devDependencies": {
+        "prisma": "^6.5.0"
+    },
+    "dependencies": {
+        "@prisma/client": "^6.5.0"
+    }
 }
