--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "prisma": "^6.5.0"
     },
     "dependencies": {
-        "@prisma/client": "^6.5.0"
+        "@prisma/client": "^6.5.0",
+        "node-cron": "^3.0.3"
     }
 }
