--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "npx prisma migrate deploy && npx prisma generate && node index.js",
       "dev": "npx nodemon index.js",
+      "cron": "node check.js",
       "fmt": "npx prettier --write '**/*.js'"
     }
   }
